--- a/Components/Layout/MainLayout.razor
+++ b/Components/Layout/MainLayout.razor
@@ -88,7 +88,7 @@
     </div>
 
     <main>
-        <MudToolBar Style="border-bottom:solid gray 0.5px;" class="top-row px-4">
+        <MudToolBar Style="border-bottom:solid gray 0.5px; class="top-row px-4">
             <MudIconButton Icon="@Icons.Material.Outlined.Menu" Color="Color.Inherit" Class="mr-5" />
             <MudText Align="Align.Left"><b>DURIAN GARDEN (POS)</b></MudText>
             <MudSpacer />
