--- a/Components/Pages/Home.razor
+++ b/Components/Pages/Home.razor
@@ -22,7 +22,7 @@
         background: #111;
         width: 100%;
         overflow: hidden;
-        background-image: url('image.jpg');
+        background-image: url('bg.jpg');
         background-size:cover;
         background-repeat:no-repeat;
     }
