--- a/Components/Layout/NavMenu.razor
+++ b/Components/Layout/NavMenu.razor
@@ -1,6 +1,6 @@
 ﻿<div class="top-row ps-3 navbar navbar-dark">
     <div class="container-fluid">
-        <a class="navbar-brand" href="">Pos</a>
+        <a class="navbar-brand" href="">DURIAN GARDEN (POS)</a>
     </div>
 </div>
 <input type="checkbox" title="Navigation menu" class="navbar-toggler" />
